# bingosync-gen

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  lib.rs  main.rs
test_assets/: add.csv  test.csv
