[package]
name = "bingosync-gen"
version = "0.2.2"
edition = "2021"
authors = ["Angry-Maid<gh.Angry-Maid>"]

[dependencies]
egui = "0.26.2"
egui_extras = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
egui-data-table = "0.1.2"
anyhow = "1.0.80"
env_logger = "0.11.2"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rfd = { version = "0.14.0" }
weighted_rand = "0.4.2"
itertools = "0.12.1"
rand = "0.8.5"
csv = "1.3.0"
egui-notify = "0.13.0"


[profile.release]
opt-level = 2
strip = true
lto = true

[profile.dev.package."*"]
opt-level = 2
